# drover

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  PLAN.md  README.md  WARP.md  drover.yaml  pyproject.toml
.beads/backup/: backup_state.json  config.jsonl
.claude/: settings.local.json
.github/workflows/: ci.yml
design/: NIST Digital File Organization Rules.md  Personal Document Directory Structure.md  TODO.md  document archival system design.md
docs/: increments.md
docs/adr/: 001-chain-of-thought-prompting.md  002-privacy-first-design.md  003-nli-classifier-roadmap.md  004-local-llm-as-primary-local-path.md  005-docling-evaluation.md  006-standardize-on-docling.md
docs/research/: docling-evaluation-spike.md  nli-vs-llm-notes.md
docs/taxonomy/: design-rationale.md  external-mapping.md  proposals.md
eval/: baselines.md  dashboard.html  dashboard_data.json  example_experiment.yaml  format_matrix.md  ground_truth.jsonl  workbench-tuning-hosted.yaml  workbench-tuning.yaml
eval/ground_truth/: synthetic.jsonl
eval/runs/: gemma4_docling.json  gemma4_unstructured.json  haiku_docling.json  haiku_unstructured.json  nli_docling.json  nli_unstructured.json
eval/runs/20260503-132742/: harvest.stderr  harvest.stdout
eval/runs/correspondence-demotion-post/: eval.stderr
eval/runs/hierarchy-refactor-post/: eval.stderr
eval/runs/reference-demotion-post/: eval.stderr
eval/runs/round4-parity-20260504-132642/: eval.stderr
eval/runs/round4-parity-20260504-141532/: eval.stderr
eval/runs/round4-realworld-20260504-160829/: harvest.stderr
eval/samples/real-world/: README.md
scripts/: CLAUDE.md  README.md  batch_organize.py  benchmark_docling_loaders.py  build_eval_dashboard.py  build_format_matrix.py  check_version.py  collect_classification_tuples.py  discover_taxonomy_terms.py  eval_runner.py  format_matrix.py  generate_eval_samples.py  organize_directory_tree.py  run_eval_experiments.py  taxonomy_discover.py
src/drover/: __init__.py  __main__.py  aggregation.py  chunking.py  classifier.py  cli.py  config.py  evaluation.py  loader.py  logging.py  metrics.py  models.py  nli_classifier.py  path_builder.py  sampling.py  service.py
src/drover/actions/: __init__.py  base.py  runner.py  tag.py
src/drover/extractors/: __init__.py  base.py  llm.py  regex.py  structured.py
src/drover/naming/: __init__.py  base.py  loader.py  nara.py
src/drover/prompts/: classification.md
src/drover/taxonomy/: __init__.py  base.py  household.py  loader.py
tests/: __init__.py  test_actions_base.py  test_aggregation.py  test_chunking.py  test_classifier.py  test_classifier_docling.py  test_classifier_metrics.py  test_classifier_parse.py  test_classifier_retry.py  test_cli_tag.py  test_config.py  test_eval_runner.py  test_extractors_docling.py  test_format_matrix.py  test_loader.py  test_metrics.py  test_models.py  test_naming.py  test_nli_classifier.py  test_nli_classifier_docling.py  test_path_builder.py  test_run_eval_experiments.py  test_service.py  test_service_debug_structure.py  test_tag_manager.py  test_taxonomy.py  test_template.py
tests/fixtures/format_matrix/: builders.py
tests/integration/: config.example.yaml  conftest.py  test_classify_pipeline.py  test_docling_ocr.py
tmp/: Grayzer Electric.prompt_1.txt  Grayzer Electric.response_1.txt
