[project]
name = "drover"
version = "0.1.0"
description = "Document classification CLI that classifies files into organized folder structures"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
dependencies = [
    "langchain>=0.3",
    "langchain-openai>=0.2",
    "langchain-ollama>=0.2",
    "langchain-anthropic>=0.2",
    "click>=8.1",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "unstructured[pdf,docx,xlsx,pptx,md]>=0.16",
    "rich>=13.0",
    "tenacity>=8.2",
    "structlog>=24.0",
    "xattr>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "bandit>=1.7.5",
    "mypy>=1.8.0",
]

[project.scripts]
drover = "drover.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/drover"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101"]                  # Skip assert warnings (used in tests)
