[project]
name = "drover"
version = "0.1.0"
description = "Document classification CLI that classifies files into organized folder structures"
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = { text = "MIT" }
dependencies = [
    "langchain>=0.3,<1.0",
    "langchain-openai>=0.2,<1.0",
    "langchain-ollama>=0.2,<1.0",
    "langchain-anthropic>=0.2,<1.0",
    "click>=8.1,<9.0",
    "pydantic>=2.0,<3.0",
    "pyyaml>=6.0,<7.0",
    "unstructured[pdf,docx,xlsx,pptx,md,rtf]>=0.16,<1.0",
    "rich>=13.0,<14.0",
    "tenacity>=8.2,<10.0",
    "structlog>=24.0,<26.0",
    "xattr>=1.0.0,<2.0",
    "json-repair>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=4.0",
    "ruff>=0.8",
    "bandit>=1.7.5",
    "mypy>=1.8.0",
    "reportlab>=4.0,<5.0",
]
nli = [
    "transformers>=4.35,<5.0",
    "torch>=2.0,<3.0",
    "sentencepiece>=0.2,<1.0",
    "scikit-learn>=1.3,<2.0",
]
docling = [
    "docling>=2.0,<3.0",
]

[project.scripts]
drover = "drover.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/drover"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src", "scripts"]
markers = [
    "integration: marks tests as integration tests (require config.yaml with LLM settings)",
]

[tool.ruff]
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
    "RUF",    # Ruff-specific
]
ignore = [
    "E501",   # Line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["drover"]

[tool.ruff.lint.per-file-ignores]
# Test fakes intentionally match real signatures without using all parameters.
# Commented-format docs and metacharacter-in-match patterns are also fine in tests.
"tests/**/*.py" = ["ARG001", "ARG002", "ERA001"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
# Allow untyped calls to third-party libraries with incomplete stubs
disallow_untyped_calls = false

# Third-party libraries without complete type stubs
[[tool.mypy.overrides]]
module = [
    "yaml",
    "xattr",
    "unstructured.*",
    "structlog.*",
    "tenacity.*",
]
ignore_missing_imports = true

# LangChain has incorrect type stubs (e.g., ChatOpenAI's max_tokens is valid at runtime)
[[tool.mypy.overrides]]
module = [
    "langchain_core.*",
    "langchain_openai.*",
    "langchain_ollama.*",
    "langchain_anthropic.*",
]
ignore_missing_imports = true
ignore_errors = true

# NLI dependencies (optional)
[[tool.mypy.overrides]]
module = [
    "transformers.*",
    "torch.*",
    "sentencepiece.*",
    "sklearn.*",
]
ignore_missing_imports = true

# Docling dependencies (optional)
[[tool.mypy.overrides]]
module = [
    "docling.*",
    "docling_core.*",
]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101"]                  # Skip assert warnings (used in tests)
